--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>The HTML5 Herald</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <script src="js/scripts.js"></script>
