feat: update english level

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                 <img class="avatar" src="source/295688643_781519883080708_3661286789774670377_n.jpg" alt="avatar">
                 <h1>Hi! This is my CV!</h1>
                 <p>My name is Kseniya Podkorytova. I want to be a frontend developer. I am smart and funny, I am good as a team player. </p>
+                <p>My <span style="text-decoration: deeppink;">English level is B2.</span></p>
+
             </section>
             <section id="skills">
                 <h2>Here are my hard skills:</h2>
