--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </header>
         <main>
             <section id="about">
-                <img class="avatar" src="source/295688643_781519883080708_3661286789774670377_n.jpg" alt="avatar">
+                <img class="avatar" src="295688643_781519883080708_3661286789774670377_n.jpg" alt="avatar">
                 <h1>Hi! This is my CV!</h1>
                 <p>My name is Kseniya Podkorytova. I want to be a frontend developer. I am smart and funny, I am good as a team player. </p>
                 <p>My <span style="text-decoration: deeppink;">English level is B2.</span></p>
@@ -79,7 +79,7 @@
         <footer>
             <div><a class="git" href="https://github.com/verymeow">github</a>
             <p class="year">2022</p></div>
-            <div><a href="https://rs.school/js/" class="rss"><img class="logo" src="source/rs_school_js.svg" alt="logo"></a>
+            <div><a href="https://rs.school/js/" class="rss"><img class="logo" src="rs_school_js.svg" alt="logo"></a>
             </div>
         </footer>
     </body>
